--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
